--- a/About.css
+++ b/About.css
@@ -1,6 +1,6 @@
 ul{
-    font-family: 'All Round Gothic','Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
+    font-family: Helvetica, Arial, sans-serif;
+    text-align: center;
 }
 .header{
     display:inline;
@@ -16,7 +16,7 @@ a{
 h1{
     text-align: center;
     font-size: 500%;
-    background-color: black;
+    background-color: #327355;
     color: white;
    padding-left: 0%;
    padding-top: 30px;
@@ -27,33 +27,27 @@ h2{
     text-align: center;
     padding-top: 25px;
     padding-bottom: 25px;
-    background-color: black;
+    background-color: #327355;
     color: white;
 }
 h3{
     text-align: center;
 }
-.center{
+.pfp{
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
-footer{
-    text-align: center;
-}
 p{
     text-align: center;
-}
-li.art{
-    text-align: center;
-    list-style-type: none;
 }
 p{
     padding-left: 50px;
     padding-right: 50px;
 }
-li.job{
-    list-style-position: outside;
-    padding-left: 600px;
-    margin
+ol#job{
+    text-align: center;
+}
+footer{
+    text-align: center;
 }
