--- a/lab4main.css
+++ b/lab4main.css
@@ -1,5 +1,5 @@
 ul{
-    font-family: 'All Round Gothic','Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
 
 }
 a{
@@ -17,7 +17,7 @@ a{
 h1{
     text-align: center;
     font-size: 500%;
-    background-color: black;
+    background-color: #327355;
     color: white;
    padding-left: 0%;
    padding-top: 30px;
@@ -33,7 +33,7 @@ h2{
     text-align: center;
     padding-top: 25px;
     padding-bottom: 25px;
-    background-color: black;
+    background-color: #327355;
     color: white;
 }
 footer{
