--- a/work.css
+++ b/work.css
@@ -11,12 +11,12 @@ a{
     color:black;
 }
 ul{
-    font-family: 'All Round Gothic','Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
 }
 h1{
     text-align: center;
     font-size: 500%;
-    background-color: black;
+    background-color: #327355;
     color: white;
    padding-left: 0%;
    padding-top: 30px;
@@ -32,7 +32,7 @@ h2{
     text-align: center;
     padding-top: 25px;
     padding-bottom: 25px;
-    background-color: black;
+    background-color: #327355;
     color: white;
 }
 footer{
