--- a/contact.css
+++ b/contact.css
@@ -10,9 +10,9 @@ a{
     text-decoration:none;
     color:black;
 }
-ul{
+ul#menu{
     font-family: Helvetica, Arial, sans-serif;
-
+    text-align: center;
 }
 h1{
     text-align: center;
