--- a/About.css
+++ b/About.css
@@ -6,7 +6,7 @@ ul#menu{
     display:inline;
     padding-left: 120px;
     padding-right: 120px;
-    font-size: 125%;
+    font-size: 1.5vw;
     margin-bottom: 150%;
 }
 a{
@@ -15,7 +15,7 @@ a{
 }
 h1{
     text-align: center;
-    font-size: 500%;
+    font-size: 5vw;
     background-color: #327355;
     color: white;
    padding-left: 0%;
