--- a/contact.css
+++ b/contact.css
@@ -1,18 +1,17 @@
+#menu{
+    font-family: Helvetica, Arial, sans-serif;
+    text-align: center;
+}
 .header{
     display:inline;
-    padding-left:120px;
-    padding-right:120px;
-    font-size:125%;
-    text-align:justify;
-   
+    padding-left: 120px;
+    padding-right: 120px;
+    font-size: 125%;
+    margin-bottom: 150%;
 }
 a{
     text-decoration:none;
     color:black;
-}
-ul#menu{
-    font-family: Helvetica, Arial, sans-serif;
-    text-align: center;
 }
 h1{
     text-align: center;
