--- a/About.css
+++ b/About.css
@@ -43,9 +43,15 @@ p{
     padding-left: 50px;
     padding-right: 50px;
 }
-ol{
-    margin-left: 600px;
+.art{
+    text-align: center;
+    list-style-position: inside;
 }
+.job{
+    text-align: center;
+    list-style-position: inside;
+}
+
 footer{
     text-align: center;
 }
