--- a/About.css
+++ b/About.css
@@ -1,27 +1,31 @@
 ul#menu{
     font-family: Helvetica, Arial, sans-serif;
     text-align: center;
+    margin-bottom: 4vw;
+    color:#327355;
 }
 .header{
     display:inline;
-    padding-left: 120px;
-    padding-right: 120px;
+    padding-left: 9vw;
+    padding-right: 9vw;
     font-size: 1.5vw;
-    margin-bottom: 150%;
 }
 a{
     text-decoration:none;
-    color:black;
+    color: #327355;
 }
 h1{
     text-align: center;
     font-size: 5vw;
     background-color: #327355;
     color: white;
-   padding-left: 0%;
-   padding-top: 30px;
-   padding-bottom: 30px;
-   padding-right: 0%;
+   padding-left: 1vw;
+   padding-top: 5vw;
+   padding-bottom: 5vw;
+  padding-right: 1vw;
+}
+#credit{
+    font-size: 1vw
 }
 h2{
     text-align: center;
@@ -32,6 +36,7 @@ h2{
 }
 h3{
     text-align: center;
+    color:#327355;
 }
 .pfp{
     display: block;
@@ -42,14 +47,17 @@ p{
     text-align: center;
     padding-left: 50px;
     padding-right: 50px;
+    color:#327355;
 }
 .art{
     text-align: center;
     list-style-position: inside;
+    color:#327355;
 }
 .job{
     text-align: center;
     list-style-position: inside;
+    color:#327355;
 }
 
 footer{
