--- a/About.css
+++ b/About.css
@@ -1,5 +1,6 @@
 ul#menu{
     font-family: Helvetica, Arial, sans-serif;
+    font-size: 1vw;
     text-align: center;
     margin-bottom: 4vw;
     color:#327355;
@@ -25,41 +26,49 @@ h1{
   padding-right: 1vw;
 }
 #credit{
-    font-size: 1vw
+    font-size: 1vw;
 }
 h2{
     text-align: center;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    font-size: 1vw;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
     background-color: #327355;
     color: white;
 }
 h3{
     text-align: center;
+    font-size:1.5vw;
     color:#327355;
 }
 .pfp{
     display: block;
+    height:auto;
+    width: 50%;
     margin-left: auto;
     margin-right: auto;
 }
 p{
     text-align: center;
-    padding-left: 50px;
-    padding-right: 50px;
+    font-size: 1vw;
+    padding-left: 4vw;
+    padding-right: 4vw;
     color:#327355;
 }
 .art{
     text-align: center;
+    font-size: 1vw;
     list-style-position: inside;
     color:#327355;
 }
 .job{
     text-align: center;
+    font-size: 1vw;
     list-style-position: inside;
     color:#327355;
 }
 
 footer{
     text-align: center;
+    font-size: 1vw;
 }
