--- a/work.css
+++ b/work.css
@@ -1,43 +1,131 @@
-.header{
-    display:inline;
-    padding-left: 120px;
-    padding-right: 120px;
-    font-size: 125%;
-    text-align:justify;
-    
-}
+*{
+    margin: auto;
+}    
 a{
     text-decoration:none;
-    color:black;
+    color:blue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-ul{
-    font-family: Helvetica, Arial, sans-serif;
-}
-h1{
-    text-align: center;
-    font-size: 500%;
-    background-color: #327355;
-    color: white;
-   padding-left: 0%;
-   padding-top: 30px;
-   padding-bottom: 30px;
-   padding-right: 0%;
-}
-.center{
+.logo{
     display: block;
-    margin-left: auto;
+    height:auto;
+    width: 50%;
+    margin-left: 5vw;
     margin-right: auto;
 }
-h2{
+#flex-container{
+    display: flex;
+    margin: 2vw;
+}
+#flex-item1{
+    display:flex;
+}
+#flex-item2{
+    display:flex;
+    font-size: 1.25vw;
+}
+#flex-item3{
+    display:flex;
+    font-size: 1.25vw;
+}
+#flex-item4{
+    display:flex;
+    font-size: 1.25vw;
+}
+#flex-item5{
+    display:flex;
+    font-size: 1.25vw;
+}
+.workmenu{
+    display:flex;
+    width: 70%;
+    border-radius: 75px;
+}
+#flex-container2{
+    display: flex;
+    margin-top: 5vw;
+    margin-left:5vw;
+    margin-right: 5vw;
+}
+.worktext{
     text-align: center;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    background-color: #327355;
-    color: white;
+    color: blue;
+    font-size: 1vw;
+    margin-top: -1vw;
+    margin-bottom: 1vw;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+}
+#flex-item6{
+    display:inline;
+    margin-top: 0%;
+    width: 300%;
+    margin-left: -1vw;
+    margin-right: -1vw;
+    
+}
+#flex-item7{
+    display:inline;
+    margin-top: 0%;
+    width: 200%;
+    margin-left: -1vw;
+    margin-right: -1vw;
+   
+}
+#flex-item8{
+    display:inline;
+    margin-top: 0%;
+    width: 200%;
+    margin-left: -1vw;
+    margin-right: -1vw;
+
+}
+#flex-item9{
+    display:inline;
+    margin-top: 0%;
+    width: 300%;
+    margin-left: -1vw;
+    margin-right: -1vw;
+}
+#flex-container3{
+    display:flex;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    margin-bottom: 5vw;
+    margin-top: 5vw;
+    
+}
+#flex-item10{
+    display:inline;
+    width: 200%;
+    margin-left: -1vw;
+    margin-right: -1vw;
+    margin-top: -5vw;
+}
+#flex-item11{
+    display:inline;
+    width: 150%;
+    margin-left: -1vw;
+    margin-right: -1vw;
+    margin-top: -5vw;
+}
+#flex-item12{
+    display:inline;
+    width: 325%;
+    margin-left: -2.5vw;
+    margin-right: -2.5vw;
+    margin-top: -2.5vw;
+}
+#flex-item13{
+    display:inline;
+    width: 200%;
+    margin-left: -1vw;
+    margin-right: .5vw;
+    margin-top: -7vw;
 }
 footer{
     text-align: center;
-}
-p{
-    text-align: center;
+    color: blue;
+    font-size: 1vw;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
