--- a/About.css
+++ b/About.css
@@ -1,71 +1,96 @@
-ul#menu{
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 1vw;
-    text-align: center;
-    margin-bottom: 4vw;
-    color:#327355;
-}
-.header{
-    display:inline;
-    padding-left: 9vw;
-    padding-right: 9vw;
-    font-size: 1.5vw;
+
+*{
+    margin: auto;
 }
 a{
     text-decoration:none;
-    color: #327355;
+    color:blue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-h1{
-    text-align: center;
-    font-size: 5vw;
-    background-color: #327355;
-    color: white;
-   padding-left: 1vw;
-   padding-top: 5vw;
-   padding-bottom: 5vw;
-  padding-right: 1vw;
+.logo{
+    display: block;
+    height:auto;
+    width: 50%;
+    margin-left: 5vw;
+    margin-right: auto;
 }
-#credit{
-    font-size: 1vw;
+#flex-container{
+    display: flex;
+    margin: 2vw;
 }
-h2{
-    text-align: center;
-    font-size: 1vw;
-    padding-top: 2vw;
-    padding-bottom: 2vw;
-    background-color: #327355;
-    color: white;
+#flex-item1{
+    display:flex;
 }
-h3{
-    text-align: center;
-    font-size:1.5vw;
-    color:#327355;
+#flex-item2{
+    display:flex;
+    font-size: 1.25vw;
+}
+#flex-item3{
+    display:flex;
+    font-size: 1.25vw;
+}
+#flex-item4{
+    display:flex;
+    font-size: 1.25vw;
+}
+#flex-item5{
+    display:flex;
+    font-size: 1.25vw;
 }
 .pfp{
     display: block;
     height:auto;
-    width: 50%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
-p{
+#credit{
     text-align: center;
     font-size: 1vw;
-    padding-left: 4vw;
-    padding-right: 4vw;
-    color:#327355;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:blue;
+}
+h1{
+    text-align: center;
+    font-size:3vw;
+    color:blue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 5vw;
+    margin-bottom: 1vw;
+}
+h3{
+    text-align: center;
+    margin-left:5vw;
+    margin-right: 5vw;
+    margin-bottom: 2vw;
+    font-size:1.5vw;
+    color:blue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.p1{
+    margin-left: 5vw;
+    margin-right: 5vw;
+    display: fle;
+    color: blue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+#p2{
+    color:blue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    font-size: 1.5vw;
+    margin-top: 2vw;
+    margin-bottom: 2vw;
+    margin-left: 8vw;
+    margin-right: 8vw;
 }
 .art{
-    text-align: center;
-    font-size: 1vw;
+    margin-left: 40vw;
+    margin-bottom: 10vw;
+    font-size: 1.5vw;
     list-style-position: inside;
-    color:#327355;
-}
-.job{
-    text-align: center;
-    font-size: 1vw;
-    list-style-position: inside;
-    color:#327355;
+    color:blue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 footer{
