--- a/contact.css
+++ b/contact.css
@@ -1,40 +1,57 @@
-#menu{
-    font-family: Helvetica, Arial, sans-serif;
-    text-align: center;
-}
-.header{
-    display:inline;
-    padding-left: 120px;
-    padding-right: 120px;
-    font-size: 125%;
-    margin-bottom: 150%;
-}
+
+*{
+    margin: auto;
+}    
 a{
     text-decoration:none;
-    color:black;
+    color:blue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-h1{
-    text-align: center;
-    font-size: 500%;
-    background-color: #327355;
-    color: white;
-   padding-left: 0%;
-   padding-top: 30px;
-   padding-bottom: 30px;
-   padding-right: 0%;
-}
-.center{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-h2{
-    text-align: center;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    background-color: #327355;
-    color: white;
-}
-footer{
-    text-align: center;
-}
+.logo{
+        display: block;
+        height:auto;
+        width: 50%;
+        margin-left: 5vw;
+        margin-right: auto;
+    }
+    #flex-container{
+        display: flex;
+        margin: 2vw;
+    }
+    #flex-item1{
+        display:flex;
+    }
+    #flex-item2{
+        display:flex;
+        font-size: 1.25vw;
+    }
+    #flex-item3{
+        display:flex;
+        font-size: 1.25vw;
+    }
+    #flex-item4{
+        display:flex;
+        font-size: 1.25vw;
+    }
+    #flex-item5{
+        display:flex;
+        font-size: 1.25vw;
+    }
+    h3{
+        text-align: center;
+        color: blue;
+        font-size: 2vw;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    .contact{
+        margin-top: 2vw;
+        width: 50%;
+        display: flex;
+    }
+    footer{
+        margin-top: 5vw;
+        text-align: center;
+        color: blue;
+        font-size: 1vw;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
