--- a/lab4main.css
+++ b/lab4main.css
@@ -1,41 +1,51 @@
-ul{
-    font-family: Helvetica, Arial, sans-serif;
-
-}
-a{
-    text-decoration:none;
-    color:black;
-    
-}
-.header{
-    display:inline;
-    padding-left: 120px;
-    padding-right: 120px;
-    font-size: 125%;
-    text-align:justify;
-}
-h1{
-    text-align: center;
-    font-size: 500%;
-    background-color: #327355;
-    color: white;
-   padding-left: 0%;
-   padding-top: 30px;
-   padding-bottom: 30px;
-   padding-right: 0%;
-}
-.center{
+*{
+    margin: auto;
+}    
+.subtext{
     display: block;
+    height:auto;
+    width: 25%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -4vw;
+    margin-bottom: 8vw;
+}
+.logo{
+    display: block;
+    height:auto;
+    width: 85%;
     margin-left: auto;
     margin-right: auto;
 }
-h2{
-    text-align: center;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    background-color: #327355;
-    color: white;
+#flex-container{
+    display:flex;
+    width: auto;
+    margin: auto;
+    margin-top: -1vw;
+}
+img{
+    display:flex;
+    width: 100%;
+}
+#flex-item1{
+    display:flex;
+    margin-right:2%;
+    margin-left:0%;
+}
+#flex-item2{
+    display:flex;
+    margin: auto; 
+    margin-right:2%;
+    margin-left:2%;
+}
+#flex-item3{
+    display:flex;
+    margin-left:2%;
+    margin-right: 0%;
 }
 footer{
     text-align: center;
+    color: blue;
+    font-size: 1vw;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
