--- a/lab4main.css
+++ b/lab4main.css
@@ -43,9 +43,15 @@ img{
     margin-left:2%;
     margin-right: 0%;
 }
+a{
+    text-decoration: none;
+    color:blue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 footer{
     text-align: center;
     color: blue;
     font-size: 1vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-decoration: none;
 }
