--- a/work.css
+++ b/work.css
@@ -128,4 +128,5 @@ footer{
     color: blue;
     font-size: 1vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-decoration: none;
 }
